# flow-inverse

./: .gitignore  count_params.py  pyproject.toml  summary.md
data/utils/: eit_data_pairs.py  make_circles.py  make_tubes.py
mesh-data/: mesh_128_h05.mat
models/: embeddings.py
models/JiT/: __init__.py  model_jit.py  model_jit_unconditional.py
models/bornnet/: __init__.py  linear_bornnet.py
models/mlp/: __init__.py  mlp.py
models/triangular/: __init__.py  default.py  triangular_x_pred_cond.py  triangular_x_pred_fine_tune.py  triangular_y_pred.py
models/unet/: __init__.py  conditional.py  default.py  modules.py  no_time.py  no_time_embed_diagonal.py
notebooks/conditional-fm-eval/: JiT_bg_ema_nocfg_cfm_noise.ipynb  JiT_bg_ema_strong_nocfg_cfm_noise.ipynb  JiT_bg_ema_strong_nocfg_cfm_pinn_noise.ipynb  JiT_bg_transform_cfm_noise.ipynb  unet_bg_transform_cfm_noise.ipynb  unet_bg_transform_cfm_noise_no_cfg.ipynb  unet_bg_transform_cfm_ood.ipynb  unet_bg_transform_cfm_ot_noise.ipynb  unet_bg_transform_cfm_ot_ood.ipynb  unet_bg_transform_cfn_dtn_post_gen.ipynb
notebooks/operator-learning-eval/: unet_default_bg_transform_bornnet_noise.ipynb  unet_default_bg_transform_bornnet_ood.ipynb  unet_default_bg_transform_unet_noise.ipynb  unet_default_bg_transform_unet_ood.ipynb  unet_default_unet_noise.ipynb  unet_refined_bg_transform_unet_noise.ipynb  unet_refined_unet_noise.ipynb
notebooks/pnp-flow/: pnp_eit_ones.ipynb  pnp_eit_threes.ipynb
notebooks/sd-flow/: sd-flow.ipynb
notebooks/triangular/: triangular_dflow.ipynb  x_pred_dtn_jit.ipynb  (+1 more)
(+42 files in other folders)
